// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Load Files Should convert complex sql account-levelisations.query.sql: account-levelisations.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "q",
      "type": "string",
    },
    Object {
      "name": "levelisationId",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "ids",
      "type": Object {
        "items": "number",
        "type": "array",
      },
    },
    Object {
      "name": "limit",
      "type": "number",
    },
    Object {
      "name": "offset",
      "type": "number",
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "levelisationId",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "accountId",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "installationId",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Pending",
          },
          Object {
            "type": "literal",
            "value": "Done",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "isAccepted",
      "type": Object {
        "items": Array [
          "null",
          "boolean",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "generationStartReadOn",
      "type": Object {
        "items": Array [
          "null",
          "Date",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "generationStartReadValue",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "generationEndReadOn",
      "type": Object {
        "items": Array [
          "null",
          "Date",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "generationEndReadValue",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "generationPercentageSplit",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "generationPayment",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "generationEnergy",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "exportStartReadOn",
      "type": Object {
        "items": Array [
          "null",
          "Date",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "exportStartReadValue",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "exportEndReadOn",
      "type": Object {
        "items": Array [
          "null",
          "Date",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "exportEndReadValue",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "exportPercentageSplit",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "exportPayment",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "exportEnergy",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "totalPayment",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "vatPayment",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "cfrFitId",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql account-levelisations-set-bulk-update.query.sql: account-levelisations-set-bulk-update.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "ids",
      "type": Object {
        "items": "number",
        "type": "array",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql accounts.query.sql: accounts.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "q",
      "type": "string",
    },
    Object {
      "name": "ids",
      "type": Object {
        "items": "number",
        "type": "array",
      },
    },
    Object {
      "name": "limit",
      "type": "number",
    },
    Object {
      "name": "offset",
      "type": "number",
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Active",
          },
          Object {
            "type": "literal",
            "value": "Pending",
          },
          Object {
            "type": "literal",
            "value": "Dispute",
          },
          Object {
            "type": "literal",
            "value": "Closed",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "startOn",
      "type": Object {
        "items": Array [
          "null",
          "Date",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "firstName",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "lastName",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "email",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "address",
      "type": "string",
    },
    Object {
      "name": "fitIds",
      "type": Object {
        "items": Object {
          "items": Array [
            "null",
            "string",
          ],
          "type": "union",
        },
        "type": "array",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql accounts.sql: accounts.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql bacs.query.sql: bacs.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "quarter",
      "type": "string",
    },
    Object {
      "name": "perPage",
      "type": "string",
    },
    Object {
      "name": "offset",
      "type": "string",
    },
  ],
  "result": Array [
    Object {
      "name": "fitId",
      "type": "string",
    },
    Object {
      "name": "name",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "amount",
      "type": "string",
    },
    Object {
      "name": "quarter",
      "type": "string",
    },
    Object {
      "name": "bankDetails",
      "type": "string",
    },
    Object {
      "name": "addressLine1",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "addressLine2",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "addressLine3",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "postcode",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql contracts.sql: contracts.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql generation-read-data.query.sql: generation-read-data.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "installationId",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "exportDateOn",
      "type": "Date",
    },
  ],
  "result": Array [
    Object {
      "name": "dateOn",
      "type": Object {
        "items": Array [
          "null",
          "Date",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql installation-meter-update.query.sql: installation-meter-update.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "meterId",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "removalDate",
      "type": "unknown",
    },
  ],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql installations.sql: installations.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql meter-reads.sql: meter-reads.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;

exports[`Load Files Should convert complex sql rates-by-tarrif-ids.query.sql: rates-by-tarrif-ids.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "ids",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
  ],
  "result": Array [
    Object {
      "name": "tariffId",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "rate",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "startOn",
      "type": Object {
        "items": Array [
          "null",
          "Date",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "tariffCode",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "tariffType",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Export",
          },
          Object {
            "type": "literal",
            "value": "Generation",
          },
          Object {
            "type": "literal",
            "value": "SEG",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "endOn",
      "type": Object {
        "items": Array [
          "null",
          "Date",
        ],
        "type": "union",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql read-create.query.sql: read-create.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "meterId",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "reason",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "type",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Opening",
          },
          Object {
            "type": "literal",
            "value": "Closing",
          },
          Object {
            "type": "literal",
            "value": "Quarterly",
          },
          Object {
            "type": "literal",
            "value": "Meter Verification",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "dateOn",
      "type": Object {
        "items": Array [
          "null",
          "Date",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "submittedAt",
      "type": Object {
        "items": Array [
          "null",
          "Date",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "value",
      "type": "number",
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "meterId",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "submittedAt",
      "type": Object {
        "items": Array [
          "null",
          "Date",
        ],
        "type": "union",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql reads-by-account-id.query.sql: reads-by-account-id.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "offset",
      "type": "string",
    },
    Object {
      "name": "perPage",
      "type": "string",
    },
  ],
  "result": Array [
    Object {
      "name": "id",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "msn",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "meterId",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "dateOn",
      "type": Object {
        "items": Array [
          "null",
          "Date",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "type",
      "type": Object {
        "items": Array [
          Object {
            "type": "literal",
            "value": "Opening",
          },
          Object {
            "type": "literal",
            "value": "Closing",
          },
          Object {
            "type": "literal",
            "value": "Quarterly",
          },
          Object {
            "type": "literal",
            "value": "Meter Verification",
          },
        ],
        "type": "union",
      },
    },
    Object {
      "name": "reason",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "createdAt",
      "type": Object {
        "items": Array [
          "null",
          "Date",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "updatedAt",
      "type": Object {
        "items": Array [
          "null",
          "Date",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "sourceSystemId",
      "type": Object {
        "items": Array [
          "null",
          "number",
        ],
        "type": "union",
      },
    },
    Object {
      "name": "mpan",
      "type": Object {
        "items": Array [
          "null",
          "string",
        ],
        "type": "union",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql tariff-rates.sql: tariff-rates.sql 1`] = `
Object {
  "params": Array [],
  "result": Array [],
}
`;
